[gd_scene load_steps=4 format=3 uid="uid://cfpbc7sk4rq6j"]

[ext_resource type="Texture2D" uid="uid://dx50ie4ans2sf" path="res://assets/image-removebg-preview.png" id="1_yj1sy"]
[ext_resource type="Script" path="res://scripts/random_sign.gd" id="1_ymvax"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rx1uh"]
radius = 92.1358

[node name="randomSign" type="Area2D"]
position = Vector2(125, 88)
scale = Vector2(0.503616, 0.459997)
script = ExtResource("1_ymvax")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 34)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_yj1sy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 110)
shape = SubResource("CircleShape2D_rx1uh")

[node name="helperText" type="Label" parent="."]
offset_left = -132.0
offset_top = -218.0
offset_right = 199.0
offset_bottom = -107.0
theme_override_font_sizes/font_size = 25
text = "hi! follow the path to one of the other towns without running out of food"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
